--- a/.travis.yml
+++ b/.travis.yml
@@ -25,5 +25,18 @@ install:
 script:
    - mkdir bin
    - unzip distribs/bonmin-${BONMIN_ARCH}.zip -d bin
+   - chmod a+x bin/*
    - python3 setup.py bdist_wheel
    - ls -al dist/*
+    before_deploy:
+      # Set up git user name and tag this commit
+      - git config --local user.name "Viu-Long Kong"
+      - git config --local user.email "viulong.kong@fr.ibm.com"
+      - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}
+      - git tag $TRAVIS_TAG
+deploy:
+  provider: releases
+  api_key: "${AUTOMATION_TOKEN}"
+  file_glob: true
+  file: dist/*.whl
+  skip_cleanup: true
