--- a/.travis.yml
+++ b/.travis.yml
@@ -31,12 +31,12 @@ script:
    - chmod a+x bin/*
    - ${PYTHON_EXE} setup.py bdist_wheel
    - ls -al dist/*
-    before_deploy:
-      # Set up git user name and tag this commit
-      - git config --local user.name "Viu-Long Kong"
-      - git config --local user.email "viulong.kong@fr.ibm.com"
-      - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}
-      - git tag $TRAVIS_TAG
+- before_deploy:
+   # Set up git user name and tag this commit
+   - git config --local user.name "Viu-Long Kong"
+   - git config --local user.email "viulong.kong@fr.ibm.com"
+   - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}
+   - git tag $TRAVIS_TAG
 deploy:
   provider: releases
   api_key: "${AUTOMATION_TOKEN}"
