--- a/.travis.yml
+++ b/.travis.yml
@@ -31,8 +31,8 @@ script:
    - chmod a+x bin/*
    - ${PYTHON_EXE} setup.py bdist_wheel
    - ls -al dist/*
-- before_deploy:
-   # Set up git user name and tag this commit
+before_deploy:
+   - # Set up git user name and tag this commit
    - git config --local user.name "Viu-Long Kong"
    - git config --local user.email "viulong.kong@fr.ibm.com"
    - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}
