--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,11 @@ before_deploy:
    - # Set up git user name and tag this commit
    - git config --local user.name "Viu-Long Kong"
    - git config --local user.email "viulong.kong@fr.ibm.com"
-   - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}
+   - if [ "x$TRAVIS_TAG" != "x" ]; then
+        export TRAVIS_TAG=${TRAVIS_TAG}
+     else
+        export TRAVIS_TAG=${TRAVIS_BRANCH}-latest
+     fi
    - git tag $TRAVIS_TAG
 deploy:
   provider: releases
