--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
    - mkdir bin
    - unzip distribs/bonmin-${BONMIN_ARCH}.zip -d bin
    - chmod a+x bin/*
-   - if [ $TRAVIS_OS_NAME = "win64" ]; then
+   - if [ "$TRAVIS_OS_NAME" = "win64" ]; then
         python setup.py bdist_wheel
      else
         python3 setup.py bdist_wheel
