--- a/.travis.yml
+++ b/.travis.yml
@@ -27,9 +27,9 @@ script:
    - unzip distribs/bonmin-${BONMIN_ARCH}.zip -d bin
    - chmod a+x bin/*
    - if [ "$TRAVIS_OS_NAME" = "win64" ]; then
-        python setup.py bdist_wheel
+        python setup.py bdist_wheel;
      else
-        python3 setup.py bdist_wheel
+        python3 setup.py bdist_wheel;
      fi
    - ls -al dist/*
 before_deploy:
@@ -37,9 +37,9 @@ before_deploy:
    - git config --local user.name "Viu-Long Kong"
    - git config --local user.email "viulong.kong@fr.ibm.com"
    - if [ "x$TRAVIS_TAG" != "x" ]; then
-        export TRAVIS_TAG=${TRAVIS_TAG}
+        export TRAVIS_TAG=${TRAVIS_TAG} ;
      else
-        export TRAVIS_TAG=${TRAVIS_BRANCH}-latest
+        export TRAVIS_TAG=${TRAVIS_BRANCH}-latest ;
      fi
    - git tag $TRAVIS_TAG
 deploy:
