--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ before_deploy:
    - if [ "x$TRAVIS_TAG" != "x" ]; then
         export TRAVIS_TAG=${TRAVIS_TAG} ;
      else
-        export TRAVIS_TAG=${TRAVIS_BRANCH}-latest ; \
+        export TRAVIS_TAG=${TRAVIS_BRANCH}-latest ;
         git tag -f $TRAVIS_TAG ;
      fi
 deploy:
