--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,7 @@ install:
 script:
    - mkdir bin
    - if [ "$UNIVERSAL_WHEEL" != "true" ]; then
-        unzip distribs/bonmin-${BONMIN_ARCH}.zip -d bin;
-        chmod a+x bin/*
+        ( unzip distribs/bonmin-${BONMIN_ARCH}.zip -d bin && chmod -f a+x bin/* );
      fi
    - if [ "$TRAVIS_OS_NAME" = "windows" ]; then
         python setup.py bdist_wheel;
