--- a/.travis.yml
+++ b/.travis.yml
@@ -1,42 +1,8 @@
 language: python
-jobs:
-   include:
-      - name: "Python 3.8.0 on Xenial Linux - Universal wheel"
-        python: 3.8           # this works for Linux but is ignored on macOS or Windows
-        env:
-         - UNIVERSAL_WHEEL=true
-      - name: "Python 3.8.0 on Xenial Linux"
-        python: 3.8           # this works for Linux but is ignored on macOS or Windows
-        env:
-         - BONMIN_ARCH=linux64
-      - name: "Python 3.7.4 on macOS"
-        os: osx
-        osx_image: xcode11.2  # Python 3.7.4 running on macOS 10.14.4
-        language: shell       # 'language: python' is an error on Travis CI macOS
-        env:
-         - BONMIN_ARCH=osx
-      - name: "Python 3.8.0 on Windows"
-        os: windows           # Windows 10.0.17134 N/A Build 17134
-        language: shell       # 'language: python' is an error on Travis CI Windows
-        before_install:
-         - choco install python --version 3.8.0
-         - python -m pip install --upgrade pip wheel
-        env:
-         - PATH=/c/Python38:/c/Python38/Scripts:$PATH
-         - BONMIN_ARCH=win64
 install:
    pip3 install --upgrade pip
 script:
-   - mkdir bin
-   - if [ "$UNIVERSAL_WHEEL" != "true" ]; then
-        ( unzip distribs/bonmin-${BONMIN_ARCH}.zip -d bin && chmod -f a+x bin/* );
-     fi
-   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then
-        python setup.py bdist_wheel;
-     else
-        python3 setup.py bdist_wheel;
-     fi
-   - ls -al dist/*
+   - bash build.sh
 before_deploy:
    - # Set up git user name and tag this commit
    - git config --local user.name "Viu-Long Kong"
