publish on monobuild branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_deploy:
 deploy:
   provider: releases
   on:
-    branch: "release_test"
+    branch: "monobuild"
   api_key: "${AUTOMATION_TOKEN}"
   file_glob: true
   file: dist/*.whl
